[tool.poetry]
name = "pylink_utils"
version = "0.1.0"
description = ""
authors = ["douglas-peter <76939369+douglas-peter@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
lxml = "^4.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
